[workspace]
resolver = "3"
members = [
  "gummi-bot",
  "gummi-cache",
  "gummi-commands",
  "gummi-db",
  "gummi-metrics"
]
default-members = ["gummi-bot"]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/met4morfosis/gummi"

[profile.release]
opt-level = "z"
debug = false
lto = true
